todo-app-frontend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loginapp-dev
  labels:
    project: loginapp
    environment: dev
