todo-app-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend
  namespace: loginapp-dev
  labels:
    app: todo-app-frontend
    project: loginapp
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
